[package]
name = "geoip-http"
version = "0.3.0"
edition = "2021"
authors = ["Chris Down <chris@chrisdown.name>"]
description = "GeoIP lookup server over HTTP"
repository = "https://github.com/cdown/geoip-http"
readme = "README.md"
keywords = ["geoip", "maxmind", "geolocation"]
categories = ["web-programming::http-server"]
license = "MIT"
rust-version = "1.82"

[dependencies]
anyhow = "1.0.100"
async-rwlock = "1.3.1"
axum = { features = ["json", "tokio", "http1", "http2"], default-features = false, version = "0.8.6" }
clap = { version = "4.5.51", default-features = false, features = ["std", "derive"] }
http = { default-features = false, version = "1.3.1" }
maxminddb = { version = "0.26.0", features = ["mmap"], default-features = false }
once_cell = { default-features = false, version = "1.21.3" }
serde = { version = "1.0.228", default-features = false }
serde_json = { default-features = false, version = "1.0.145" }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"], default-features = false }
tower-http = { version = "0.6.6", features = ["trace"], default-features = false }
tracing = { default-features = false, version = "0.1.41" }
tracing-attributes = "0.1.30"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "ansi", "smallvec"], default-features = false }
